# olivine

./: CMakeLists.txt
src/core/base/: def.hh
src/gui/base/: def.hh  line.cc  line.hh  point.cc  point.hh  rect.cc  rect.hh  segment.cc  segment.hh
tests/: gui-main.cc
